tests/regression/errors/basic/import_error_4.csd
// Import error test 4
yeet "nonexistent_module_4"
sus result drip = some_function(4)
